[package]
name = "nyx"
version = "0.1.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides functions for finding the amount of bytes that are processed per second."
documentation = "https://docs.rs/nyx"
repository = "https://github.com/evenorog/nyx"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["throughput", "bytes", "metrics"]
categories = []
exclude = ["/.travis.yml"]
edition = "2018"

[badges]
travis-ci = { repository = "evenorog/nyx" }
maintenance = { status = "actively-developed" }
